KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -25,7 +25,7 @@
 
 การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้าจะต้องเป็นราคาที่ได้ชำระจริงหรือที่จะต้องชำระสำหรับของที่นำเข้าเมื่อได้มีการขายเพื่อส่งออกมายังราชอาณาจักร โดยต้องมีการปรับราคาตามหลักเกณฑ์ดังต่อไปนี้
 
- -  ค่าใช้จ่ายหรือรายได้ที่ต้องนำมารวมไว้ในราคาซื้อขายของที่นำเข้า  
+1. ค่าใช้จ่ายหรือรายได้ที่ต้องนำมารวมไว้ในราคาซื้อขายของที่นำเข้า  
     -   ค่าสิทธิและค่าธรรมเนียมใบอนุญาตที่เกี่ยวข้องกับของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมอันเป็นเงื่อนไขในการขายของนั้น
     -   รายได้ซึ่งผู้ขายได้รับจากการที่ผู้ซื้อนำของที่นำเข้าไปใช้ หรือขายต่อไม่ว่าโดยทางตรงหรือทางอ้อม
     -   ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า ค่าขนของลง ค่าขนของขึ้นและค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า
@@ -202,7 +202,7 @@
 ที่มา :  [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5Mzc2NzIzMywxMjU4OTYyODU2LDEyNT
-g5NjI4NTYsLTE0NDk0MDAxNzAsLTcyODU4NDQ3LDk0OTUwMTgx
-Nl19
+eyJoaXN0b3J5IjpbLTM5NjE5NjMxNywxNzkzNzY3MjMzLDEyNT
+g5NjI4NTYsMTI1ODk2Mjg1NiwtMTQ0OTQwMDE3MCwtNzI4NTg0
+NDcsOTQ5NTAxODE2XX0=
 -->
