KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -201,8 +201,39 @@
 
 ที่มา :  [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 
+
+Definition lists
+---------------------------
+
+Markdown
+:  Text-to-HTML conversion tool Authors
+:  John
+:  Luke Footnotes
+
+---------------------------
+
+Some text with a footnote.[^1]
+
+[^1]: The footnote.
+
+Abbreviations
+---------------------------
+
+Markdown converts text to HTML.
+
+*[HTML]: HyperText Markup Language
+
+LaTeX math
+---------------------------
+
+The Gamma function satisfying $\Gamma(n) = (n-1)!\quad\forall
+n\in\mathbb N$ is via the Euler integral
+
+$$
+\Gamma(z) = \int_0^\infty t^{z-1}e^{-t}dt\,.
+$$
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2ODgyMjI0OTMsLTM5NjE5NjMxNywxNz
-kzNzY3MjMzLDEyNTg5NjI4NTYsMTI1ODk2Mjg1NiwtMTQ0OTQw
-MDE3MCwtNzI4NTg0NDcsOTQ5NTAxODE2XX0=
+eyJoaXN0b3J5IjpbLTY5NjY3ODE0MSwtMzk2MTk2MzE3LDE3OT
+M3NjcyMzMsMTI1ODk2Mjg1NiwxMjU4OTYyODU2LC0xNDQ5NDAw
+MTcwLC03Mjg1ODQ0Nyw5NDk1MDE4MTZdfQ==
 -->
