--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -6,7 +6,8 @@
 
 การกำหนดราคาศุลกากรตามหลักการของแกตต์ กำหนดจาก 6 วิธี ดังนี้
 
-1.  [**ราคาซื้อขายของที่นำเข้า (Transaction value)**]()  หมายถึง ราคาซื้อขายที่ผู้ซื้อสินค้าได้ชำระจริงหรือที่จะต้องชำระให้กับผู้ขายในต่างประเทศสำหรับของที่นำเข้า ซึ่งได้มีการปรับราคาหรือได้นำมูลค่าหรือค่าใช้จ่ายอื่นๆ ไปรวมด้วย เช่น ค่าวัสดุเสริม ค่านายหน้า หรือค่าสิทธิ เป็นต้น.
+1.  [**ราคาซื้อขายของที่นำเข้า (Transaction value)**](### วิธีที่ 1 ราคาซื้อขายของที่นำเข้า (Transaction value)
+  หมายถึง ราคาซื้อขายที่ผู้ซื้อสินค้าได้ชำระจริงหรือที่จะต้องชำระให้กับผู้ขายในต่างประเทศสำหรับของที่นำเข้า ซึ่งได้มีการปรับราคาหรือได้นำมูลค่าหรือค่าใช้จ่ายอื่นๆ ไปรวมด้วย เช่น ค่าวัสดุเสริม ค่านายหน้า หรือค่าสิทธิ เป็นต้น.
     
 2.  **ราคาซื้อขายของที่เหมือนกัน (Transaction value of Identical Goods)**  หมายถึง ราคาซื้อขายของที่มีลักษณะเหมือนกันทุกด้านกับของที่นำเข้า ไม่ว่าจะเป็นทางกายภาพ คุณภาพ และชื่อเสียง และต้องผลิตขึ้นในประเทศเดียวกันกับของนำเข้าด้วย ทั้งนี้ โดยให้คำนึงถึงค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนของขึ้น และค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของมายังด่านศุลกากรที่นำของเข้าด้วย.
     
@@ -204,8 +205,8 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczNDk3MjE0NCwxMDkzMzcyNzc5LDgxMz
-UwMDk3NSwtMzk2MTk2MzE3LDE3OTM3NjcyMzMsMTI1ODk2Mjg1
-NiwxMjU4OTYyODU2LC0xNDQ5NDAwMTcwLC03Mjg1ODQ0Nyw5ND
-k1MDE4MTZdfQ==
+eyJoaXN0b3J5IjpbOTA0MTE2ODcsMTA5MzM3Mjc3OSw4MTM1MD
+A5NzUsLTM5NjE5NjMxNywxNzkzNzY3MjMzLDEyNTg5NjI4NTYs
+MTI1ODk2Mjg1NiwtMTQ0OTQwMDE3MCwtNzI4NTg0NDcsOTQ5NT
+AxODE2XX0=
 -->
