KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -153,10 +153,10 @@
 1. กรณีมีปัญหาและต้องการพบพนักงานศุลกากร ณ ด่านศุลกากรที่นำของเข้า 
 	- ในเรื่องปัญหาพิกัดศุลกากร อัตราศุลกากร ราคาศุลกากร 
 	- ในเรื่องที่ต้องแจ้งความไว้ต่อพนักงานศุลกากรก่อนการส่งมอบว่าจะยื่นคำขอคืนเงินอากร และได้มีการแจ้งเหตุผลไว้ในช่อง หมายเหตุ **=="Remark"==** แล้ว
-2. กรณีของนำเข้าเป็นของที่มีลักษณะ ดังต่อไปนี้
-	- ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร
-	- ของเก่าใช้แล้ว
-	- ของด้อยสภาพ
+2. **กรณีของนำเข้าเป็นของที่มีลักษณะ ดังต่อไปนี้
+	- ==ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร==
+	- ==ของเก่าใช้แล้ว==
+	- ==ของด้อยสภาพ==
 3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าตาม (1) หรือ (2) ให้ระบุค่า **=="Y"==** ในช่อง **_"Assessment Request Code"_ “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า”**
 4. ระบบคอมพิวเตอร์ของศุลกากรจะสั่งการตรวจใบขนสินค้าขาเข้าเป็น **_"เปิดตรวจ"_** 
 5. พบพนักงานศุลกากร ณ หน่วยบริการศุลกากร ที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารมาแสดง หรือร้องขอให้พนักงานศุลกากรพิจารณาดำเนินการใด ๆ  
@@ -246,5 +246,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDc0ODIyNjgzXX0=
+eyJoaXN0b3J5IjpbMTQ5MzAzNDkwNyw0NzQ4MjI2ODNdfQ==
 -->
