KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -153,7 +153,7 @@
 1. กรณีมีปัญหาและต้องการพบพนักงานศุลกากร ณ ด่านศุลกากรที่นำของเข้า 
 	- ในเรื่องปัญหาพิกัดศุลกากร อัตราศุลกากร ราคาศุลกากร 
 	- ในเรื่องที่ต้องแจ้งความไว้ต่อพนักงานศุลกากรก่อนการส่งมอบว่าจะยื่นคำขอคืนเงินอากร และได้มีการแจ้งเหตุผลไว้ในช่อง หมายเหตุ **=="Remark"==** แล้ว
-2. **กรณีของนำเข้าเป็นของที่มีลักษณะ ดังต่อไปนี้
+2. **กรณีของนำเข้าเป็นของที่มีลักษณะ ดังต่อไปนี้**
 	- ==ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร==
 	- ==ของเก่าใช้แล้ว==
 	- ==ของด้อยสภาพ==
@@ -175,10 +175,10 @@
 ### หลักการคำนวณราคาของจากเงินตราต่างประเทศเป็นเงินตราไทย
 1. การคำนวณราคาของให้เป็นเงินตราไทย ให้ปฏิบัติดังนี้
 	- คำนวณตามอัตราแลกเปลี่ยนเงินตราต่างประเทศที่กรมศุลกากรประกาศกำหนด  สำหรับการนำเข้าและการส่งออก 
-	- ของที่**นำเข้า** ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **วันนำเข้า**
-	-  ของ**ส่งออก**ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **วันที่ออกใบขนสินค้าให้**
+	- ของที่**นำเข้า** ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **==วันนำเข้า==**
+	-  ของ**ส่งออก**ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **==วันที่ออกใบขนสินค้าให้==**
 2. การประกาศกำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศ สำนักมาตรฐานพิธีการและราคาศุลกากร จะดำเนินการ ดังนี้
-	- พิจารณากำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศเป็นเงินตราไทย จากข้อมูลของธนาคารแห่งประเทศไทยในรอบ **7 วัน ก่อนวันประกาศ**  โดยใช้**อัตราซื้อสำหรับการส่งออก** และ**อัตราขายสำหรับการนำเข้า**
+	- พิจารณากำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศเป็นเงินตราไทย จากข้อมูลของธนาคารแห่งประเทศไทยในรอบ **7 วัน ก่อนวันประกาศ**  โดยใช้**อัตราซื้อสำหรับการส่งออก==** และ**อัตราขายสำหรับการนำเข้า**
 	- ดำเนินการให้มีการประกาศใช้อัตราแลกเปลี่ยนเงินตราต่างประเทศก่อนสิ้นเดือนไม่น้อยกว่า 7 วัน และมีผลใช้ในเดือนถัดไป หากวันประกาศตรงกับวันหยุดราชการ ให้ประกาศในวันทำการถัดไป
 
 
@@ -229,7 +229,7 @@
 
 	- หากมีเลขที่ใบขนสินค้าที่อ้างถึง (Reference Declaration Number) และรายการในใบขนสินค้าที่อ้างถึง (Reference Declaration Line Number) ต่างกัน ให้แยกรายการของในส่วน Import Declaration Detail ด้วย
 
-	- กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ
+	- ==กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ==
 
 ## หลักการบันทึกค่าภาษีอากรและวางประกัน ในใบขนสินค้าขาเข้า
 
@@ -246,5 +246,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ5MzAzNDkwNyw0NzQ4MjI2ODNdfQ==
+eyJoaXN0b3J5IjpbNTcxMDk1ODAzLDQ3NDgyMjY4M119
 -->
