--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -1,5 +1,6 @@
+
 การปฏิบัติพิธีการศุลกากรสำหรับการนำเข้า (e-Import)
-=============================
+====
 
 
 การนำของเข้ามาในราชอาณาจักร หมายถึง การนำของใด ๆ จากภายนอกราชอาณาจักรเข้ามาในราชอาณาจักรโดยการขนส่งทางเรือ ทางรถไฟ ทางรถยนต์ คนเดินเข้ามา ทางเครื่องบิน ทางไปรษณีย์ ทางท่อขนส่งทางบก ทางสายส่งไฟฟ้า ทางเรือที่เข้าออกด่านศุลกากรทางบก เรือเล็กทางทะเลที่เข้าออก ด่านศุลกากรทางทะเล ทางผู้โดยสารนำพาขึ้นอากาศยาน เป็นต้น
@@ -107,11 +108,11 @@
 2. หากประสงค์จะขออนุญาตขนย้ายสินค้าไปตรวจปล่อย ณ สถานที่อื่นนอกจากเขตด่านศุลกากร ที่นำของเข้า (First Port) ให้บันทึกข้อมูล ดังนี้
 
 	- รหัสสถานที่ตรวจปล่อย (Release Port)  ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น  ด่านศุลกากร ที่นำของเข้า (First Port)  และ
-	- ให้บันทึกค่า **=="Y" ในช่องขออนุญาตเปิดตรวจนอกสถานที่==**  (Inspection request code)
+	- ให้บันทึกค่า **`"Y" ในช่องขออนุญาตเปิดตรวจนอกสถานที่`**  (Inspection request code)
 		- หากไม่ติดเงื่อนไขความเสี่ยงระบบจะสั่งการตรวจปล่อยสินค้าโดยไม่ต้องมัดลวด
 		- หากติดเงื่อนไขความเสี่ยงระบบจะสั่งการตรวจเป็น “ให้ไปดำเนินการมัดลวด ณ  ด่านศุลกากรที่นำของเข้า” เพื่อนำไปตรวจปล่อยนอกสถานที่ตามที่ระบุข้อมูลไว้ ในช่องรหัสสถานที่ตรวจปล่อยนอกสถานที่ (Outside Release Port)
 
-	- **กรณีติดเงื่อนไขความเสี่ยง**ระบบจะสั่งการตรวจเป็น  **==_"ให้ไปดำเนินการมัดลวด ณ  ด่านศุลกากร ที่นำของเข้า "_==** หากพนักงานศุลกากรผู้มีอำนาจหน้าที่หรือผู้ที่ได้รับมอบหมายเห็นว่าการเปิดตรวจที่ ด่านศุลกากรที่นำของเข้า (First Port)  จะเป็นประโยชน์กว่าให้ทำการเปิดตรวจของ ณ ที่นำของเข้าได้
+	- **กรณีติดเงื่อนไขความเสี่ยง**ระบบจะสั่งการตรวจเป็น  **`_"ให้ไปดำเนินการมัดลวด ณ  ด่านศุลกากร ที่นำของเข้า "_`** หากพนักงานศุลกากรผู้มีอำนาจหน้าที่หรือผู้ที่ได้รับมอบหมายเห็นว่าการเปิดตรวจที่ ด่านศุลกากรที่นำของเข้า (First Port)  จะเป็นประโยชน์กว่าให้ทำการเปิดตรวจของ ณ ที่นำของเข้าได้
 
 
 
@@ -119,7 +120,7 @@
 
 - เครื่องหมายและเลขหมายหีบห่อ (Shipping Marks) ต้องสำแดงเครื่องหมายและเลขหมายหีบห่อให้ตรงกับความเป็นจริง ซึ่งจะต้องตรงกับใบตราส่งสินค้า โดยให้สำแดง ดังนี้
 
-	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **==ให้บันทึกเพียง 512 ตัวอักษรได้==**
+	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **`ให้บันทึกเพียง 512 ตัวอักษรได้`**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความที่เป็นภาษาต่างประเทศ ซึ่งไม่สามารถบันทึกข้อความนั้นได้ เช่น ภาษาจีน ให้ระบุคำว่า **_“PICTURE”_**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นรูปภาพให้ระบุคำว่า **_“PICTURE”_**
 	
@@ -152,12 +153,12 @@
 
 1. กรณีมีปัญหาและต้องการพบพนักงานศุลกากร ณ ด่านศุลกากรที่นำของเข้า 
 	- ในเรื่องปัญหาพิกัดศุลกากร อัตราศุลกากร ราคาศุลกากร 
-	- ในเรื่องที่ต้องแจ้งความไว้ต่อพนักงานศุลกากรก่อนการส่งมอบว่าจะยื่นคำขอคืนเงินอากร และได้มีการแจ้งเหตุผลไว้ในช่อง หมายเหตุ **=="Remark"==** แล้ว
+	- ในเรื่องที่ต้องแจ้งความไว้ต่อพนักงานศุลกากรก่อนการส่งมอบว่าจะยื่นคำขอคืนเงินอากร และได้มีการแจ้งเหตุผลไว้ในช่อง หมายเหตุ **`"Remark"`** แล้ว
 2. **กรณีของนำเข้าเป็นของที่มีลักษณะ ดังต่อไปนี้**
-	- ==ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร==
-	- ==ของเก่าใช้แล้ว==
-	- ==ของด้อยสภาพ==
-3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าตาม (1) หรือ (2) ให้ระบุค่า **=="Y"==** ในช่อง **_"Assessment Request Code"_ “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า”**
+	- `ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร`
+	- `ของเก่าใช้แล้ว`
+	- `ของด้อยสภาพ`
+3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าตาม (1) หรือ (2) ให้ระบุค่า **`"Y"`** ในช่อง **_"Assessment Request Code"_ “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า”**
 4. ระบบคอมพิวเตอร์ของศุลกากรจะสั่งการตรวจใบขนสินค้าขาเข้าเป็น **_"เปิดตรวจ"_** 
 5. พบพนักงานศุลกากร ณ หน่วยบริการศุลกากร ที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารมาแสดง หรือร้องขอให้พนักงานศุลกากรพิจารณาดำเนินการใด ๆ  
 
@@ -175,10 +176,10 @@
 ### หลักการคำนวณราคาของจากเงินตราต่างประเทศเป็นเงินตราไทย
 1. การคำนวณราคาของให้เป็นเงินตราไทย ให้ปฏิบัติดังนี้
 	- คำนวณตามอัตราแลกเปลี่ยนเงินตราต่างประเทศที่กรมศุลกากรประกาศกำหนด  สำหรับการนำเข้าและการส่งออก 
-	- ของที่**นำเข้า** ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **==วันนำเข้า==**
-	-  ของ**ส่งออก**ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **==วันที่ออกใบขนสินค้าให้==**
+	- ของที่**นำเข้า** ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **`วันนำเข้า`**
+	-  ของ**ส่งออก**ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **`วันที่ออกใบขนสินค้าให้`**
 2. การประกาศกำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศ สำนักมาตรฐานพิธีการและราคาศุลกากร จะดำเนินการ ดังนี้
-	- พิจารณากำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศเป็นเงินตราไทย จากข้อมูลของธนาคารแห่งประเทศไทยในรอบ **7 วัน ก่อนวันประกาศ**  โดยใช้**อัตราซื้อสำหรับการส่งออก==** และ**อัตราขายสำหรับการนำเข้า**
+	- พิจารณากำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศเป็นเงินตราไทย จากข้อมูลของธนาคารแห่งประเทศไทยในรอบ **7 วัน ก่อนวันประกาศ**  โดยใช้**อัตราซื้อสำหรับการส่งออก`** และ**อัตราขายสำหรับการนำเข้า**
 	- ดำเนินการให้มีการประกาศใช้อัตราแลกเปลี่ยนเงินตราต่างประเทศก่อนสิ้นเดือนไม่น้อยกว่า 7 วัน และมีผลใช้ในเดือนถัดไป หากวันประกาศตรงกับวันหยุดราชการ ให้ประกาศในวันทำการถัดไป
 
 
@@ -229,7 +230,7 @@
 
 	- หากมีเลขที่ใบขนสินค้าที่อ้างถึง (Reference Declaration Number) และรายการในใบขนสินค้าที่อ้างถึง (Reference Declaration Line Number) ต่างกัน ให้แยกรายการของในส่วน Import Declaration Detail ด้วย
 
-	- ==กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ==
+	- `กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ`
 
 ## หลักการบันทึกค่าภาษีอากรและวางประกัน ในใบขนสินค้าขาเข้า
 
@@ -240,11 +241,12 @@
 
 - ตัวอย่างด้านบนใช้ Duty rate เท่ากับ 20%
 - การคำนวณอากรที่ชำระ (Amount Paid) ปกติแล้วจะต้องมีค่าเท่ากับอากรตามปกติ (Amount) ตาม Case 1  ยกเว้น Exemption Rate มีค่า
-- อากรที่ชำระ (Amount Paid)  ที่คำนวณได้นั้น หากต้องการวางประกัน ให้บันทึกค่าที่ช่อง **_Deposit Amount_** ให้เท่ากับ ==อากรที่ชำระ (Amount Paid)==  นั้น 
+- อากรที่ชำระ (Amount Paid)  ที่คำนวณได้นั้น หากต้องการวางประกัน ให้บันทึกค่าที่ช่อง **_Deposit Amount_** ให้เท่ากับ `อากรที่ชำระ (Amount Paid)`  นั้น 
 
-> ==การคำนวณค่าวางประกัน ทุกกรณี ไม่ต้องปัดเป็นตัวกลมให้วางเท่ากับค่าอากรที่ชำระ==
+> `การคำนวณค่าวางประกัน ทุกกรณี ไม่ต้องปัดเป็นตัวกลมให้วางเท่ากับค่าอากรที่ชำระ`
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTcxMDk1ODAzLDQ3NDgyMjY4M119
+eyJoaXN0b3J5IjpbLTE2OTExNzc4OTQsNTcxMDk1ODAzLDQ3ND
+gyMjY4M119
 -->
