KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -5,7 +5,7 @@
   
 ## รายการสุทธินำกลับ ประเภทที่ 1 ภาค 4   
   
-ของที่ส่งออกรวมทั้งของที่ส่งกลับออกไป ซึ่งนำกลับเข้ามา**==ภายในหนึ่งปี==** _โดยไม่เปลี่ยนแปลงลักษณะหรือรูปแต่ประการใด_ และในเวลาที่ส่งออกนั้นได้รับใบสุทธิสำหรับนำกลับเข้ามาแล้ว ได้รับยกเว้นอากร  ให้ผู้ขอยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้  
+ของที่ส่งออกรวมทั้งของที่ส่งกลับออกไป ซึ่งนำกลับเข้ามา **==ภายในหนึ่งปี==** _โดยไม่เปลี่ยนแปลงลักษณะหรือรูปแต่ประการใด_ และในเวลาที่ส่งออกนั้นได้รับใบสุทธิสำหรับนำกลับเข้ามาแล้ว ได้รับยกเว้นอากร  ให้ผู้ขอยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้  
 
 - ระบุ Re - Importation Certificate = Y ที่ส่วนรายการในใบขนสินค้า  	
 - การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า  
@@ -293,7 +293,8 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTk0Mzk1MTcyLDI2MTYwMjQ3OCwxOTEyMz
-kyMDQ2LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMjA5NDMzNDk5
-NCwtMTQzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
+eyJoaXN0b3J5IjpbNjI5NjkwMjg0LDU5NDM5NTE3MiwyNjE2MD
+I0NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYyLC0yNzI0MDY3MjAs
+LTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MT
+AyMTMxNTFdfQ==
 -->
