KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -14,9 +14,9 @@
 	-  **ลดเหลือร้อยละ 5** จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ Gold Card) ให้บันทึก Exemption Rate = 95 
 5. วางประกันตามมาตรา 30 สำหรับของนำเข้าตามมาตรา 29  ให้บันทึกการวางประกัน โดย _**ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D09)**_  ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
 	- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
-	- ==ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน== 
-	- ==VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้==
-	- **การวางประกันให้** **==ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล==**
+	- **ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน**
+	-  **VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้**
+	- **การวางประกันให้** **ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล**
  
 ### สิทธิคลังสินค้าทัณฑ์บน
  - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
@@ -61,10 +61,10 @@
 		- ยกเว้นอากร ให้บันทึก Exemption Rate = **100**
 		- ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = **50** 
 		- ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = **95**
-		- การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code ==(D10)== ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการใน  ใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
+		- การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code **(D10)** ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการใน  ใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
 				- อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
 				 - VAT ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
-				 -  **==ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น==**
+				 -  **ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น**
 
  
 ### สิทธิคืนอากรขาเข้า ตามมาตรา 28  (Re-Export)
@@ -82,18 +82,18 @@
 	- **ระบุ Re-Export  = Y ที่ส่วนรายการในใบขนสินค้าทุกรายการ**
 	- มีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ โดยให้ **ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท** _ต่อใบขนสินค้าขาเข้า_
 	- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น
-	- ระบุ ==Tariff Code== = พิกัดอัตราศุลกากร==ให้ตรงกับชนิดของที่จะส่งกลับออกไป==
+	- ระบุ**Tariff Code** พิกัดอัตราศุลกากร **ให้ตรงกับชนิดของที่จะส่งกลับออกไป**
 	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
 4. ให้**จัดทำใบขนสินค้าขาเข้าก่อน**และนำ _เลขที่ใบขนสินค้าขาเข้าพร้อมรายการไปบันทึกไว้ใน
 ใบขนสินค้าขาออก_
-5. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักร  **_อยู่นอกอารักขาของศุลกากรแล้ว_** ให้ทำใบขนสินค้าขาเข้าปกติ และจัดทำใบขนสินค้าขาออกโดยระบุในแต่ละรายการที่ส่งออกเป็น Re-Export  และให้ระบุเลขที่ใบขนสินค้าขาเข้าพร้อมรายการ   แล้วไปดำเนินการขอคืนอากรในระบบคืนอากรทั่วไปเมื่อส่งออกเรียบร้อยแล้ว
-6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า  **==เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น==**
+5. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักร  **อยู่นอกอารักขาของศุลกากรแล้ว** ให้ทำใบขนสินค้าขาเข้าปกติ และจัดทำใบขนสินค้าขาออกโดยระบุในแต่ละรายการที่ส่งออกเป็น Re-Export  และให้ระบุเลขที่ใบขนสินค้าขาเข้าพร้อมรายการ   แล้วไปดำเนินการขอคืนอากรในระบบคืนอากรทั่วไปเมื่อส่งออกเรียบร้อยแล้ว
+6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า  **เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น**
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjA2MTE0NjMsLTE5MzI4NDA3OSwtMT
-MxNTA5NTU2NCwxNTMyMDU1NDI2LDExOTc3OTU2NjQsLTEyNDQw
-ODQ0MzYsMTI5MjcwNTgxMCwxOTk4OTYxNDQ1LDE4NDcyMTA5NS
-wtMTI0MzAwNjk5LDEyNDc1NDA3NTUsLTEzNDE3MTA0NDddfQ==
-
+eyJoaXN0b3J5IjpbOTI4Nzk4NTU4LC0xMDYwNjExNDYzLC0xOT
+MyODQwNzksLTEzMTUwOTU1NjQsMTUzMjA1NTQyNiwxMTk3Nzk1
+NjY0LC0xMjQ0MDg0NDM2LDEyOTI3MDU4MTAsMTk5ODk2MTQ0NS
+wxODQ3MjEwOTUsLTEyNDMwMDY5OSwxMjQ3NTQwNzU1LC0xMzQx
+NzEwNDQ3XX0=
 -->
