KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -14,7 +14,7 @@
 - อัตราอากร ใช้ Tariff Code และ Tariff Sequence
 - อากร ยกเว้น (บันทึก Exemption Rate = 100%)
 	 VAT ยกเว้น (บันทึก Exemption Rate = 100%)
-- มูลค่าการนำเข้า CIF = **==ค่าของ==**
+- มูลค่าการนำเข้า CIF = **ค่าของ**
 - บันทึกเลขที่ใบขนสินค้าขาออกและรายการที่ของใบขนสินค้าขาออกที่อ้างถึง
 
 
@@ -32,7 +32,7 @@
 - อัตราอากร ใช้ Tariff Code และ Tariff Sequence
 - อากร ชำระตามปกติ
 - VAT ชำระตามปกติ
-- มูลค่าการนำเข้า  CIF = **==ค่าซ่อม==**
+- มูลค่าการนำเข้า  CIF = **ค่าซ่อม**
 - บันทึกเลขที่ใบขนสินค้าขาออกและรายการที่ของใบขนสินค้าขาออกที่อ้างถึง
 
 
@@ -46,7 +46,7 @@
 - อากร ยกเว้น (บันทึก Exemption Rate = 100%)
 - VAT ยกเว้น (บันทึก Exemption Rate = 100%)
 
-การกำหนดค่าวางเงินประกัน **==(วางประกันที่ด่านศุลกากร ไม่ต้องบันทึกในโปรแกรม)==**
+การกำหนดค่าวางเงินประกัน **(วางประกันที่ด่านศุลกากร ไม่ต้องบันทึกในโปรแกรม)**
 
 - **_ให้วางเป็นสัญญาประกันทัณฑ์บนเพื่อการปฏิบัติพิธีการ_** 
 - คำนวณจาก ค่าภาษีอากรอันพึงจะต้องชำระตามปกติ แล้วคำนวณเงินเพิ่มอีกร้อยละ 20 ของเงินภาษีอากรที่ได้ประเมินไว้ และรวมกำหนดเป็นเงินประกัน 
@@ -66,7 +66,7 @@
 
 ## สิทธิของใช้ส่วนตัว (ของส่วนตัว) ประเภทที่ 5 ภาค 4 
 
-ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **==เว้นแต่ รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง==**
+ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **เว้นแต่ รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง**
 
 **สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น** ซึ่งเป็นของส่วนตัวที่ผู้เดินทางนำเข้ามาพร้อมกับตนนั้น ยกเว้นอากรให้ได้ แต่ต้องไม่เกินปริมาณ ดังนี้
 
@@ -293,8 +293,8 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NTgzODY5MDAsNjI5NjkwMjg0LDU5ND
-M5NTE3MiwyNjE2MDI0NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYy
-LC0yNzI0MDY3MjAsLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLT
-k1MTQxMjYyMyw4MTAyMTMxNTFdfQ==
+eyJoaXN0b3J5IjpbMTY4OTg0NDY1MiwtMTY1ODM4NjkwMCw2Mj
+k2OTAyODQsNTk0Mzk1MTcyLDI2MTYwMjQ3OCwxOTEyMzkyMDQ2
+LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMjA5NDMzNDk5NCwtMT
+QzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
 -->
