KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -5,9 +5,9 @@
 1. ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
 2. ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
  3. ระบุ Privilege Code 
-	- **_กรณีชำระอากร_** **ให้ระบุตามสิทธิที่มีขณะนำเข้า** เช่น มาตรา 12, WTO, TAU, AFTA  
+	- **กรณีชำระอากร** **ให้ระบุตามสิทธิที่มีขณะนำเข้า** เช่น มาตรา 12, WTO, TAU, AFTA  
 เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
-	- **กรณีวางประกัน**ตามมาตรา 30  ให้ระบุ ==Privilege Code = 000== ตามอัตราปกติเท่านั้น
+	- **กรณีวางประกัน**ตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
 4. การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
 	- **ชำระอากรเต็มจำนวน** 
 	- **ลดเหลือกึ่งหนึ่ง**จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ จดทะเบียนตลาดหลักทรัพย์, บริษัทมหาชนจำกัด, สมาชิกสภาอุตสาหกรรม, สมาชิกหอการค้า, อื่น ๆ) ให้บันทึก Exemption Rate = 50 
@@ -26,7 +26,7 @@
  - ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
  - ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
  - ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากร ที่นำของเข้า (First Port)
- - **ระบุรหัสสถานที่ตรวจปล่อย ==(Release Port)== ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า ==(First Port)==**  
+ - **ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)**  
  
 ### สิทธิเขตปลอดอากร (Free Zone)
 
@@ -91,9 +91,9 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI4Nzk4NTU4LC0xMDYwNjExNDYzLC0xOT
-MyODQwNzksLTEzMTUwOTU1NjQsMTUzMjA1NTQyNiwxMTk3Nzk1
-NjY0LC0xMjQ0MDg0NDM2LDEyOTI3MDU4MTAsMTk5ODk2MTQ0NS
-wxODQ3MjEwOTUsLTEyNDMwMDY5OSwxMjQ3NTQwNzU1LC0xMzQx
-NzEwNDQ3XX0=
+eyJoaXN0b3J5IjpbMTkxNzAzOTEzNiwtMTA2MDYxMTQ2MywtMT
+kzMjg0MDc5LC0xMzE1MDk1NTY0LDE1MzIwNTU0MjYsMTE5Nzc5
+NTY2NCwtMTI0NDA4NDQzNiwxMjkyNzA1ODEwLDE5OTg5NjE0ND
+UsMTg0NzIxMDk1LC0xMjQzMDA2OTksMTI0NzU0MDc1NSwtMTM0
+MTcxMDQ0N119
 -->
