KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -108,11 +108,11 @@
 2. หากประสงค์จะขออนุญาตขนย้ายสินค้าไปตรวจปล่อย ณ สถานที่อื่นนอกจากเขตด่านศุลกากร ที่นำของเข้า (First Port) ให้บันทึกข้อมูล ดังนี้
 
 	- รหัสสถานที่ตรวจปล่อย (Release Port)  ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น  ด่านศุลกากร ที่นำของเข้า (First Port)  และ
-	- ให้บันทึกค่า **`"Y" ในช่องขออนุญาตเปิดตรวจนอกสถานที่`**  (Inspection request code)
+	- ให้บันทึกค่า **"Y" ในช่องขออนุญาตเปิดตรวจนอกสถานที่**  (Inspection request code)
 		- หากไม่ติดเงื่อนไขความเสี่ยงระบบจะสั่งการตรวจปล่อยสินค้าโดยไม่ต้องมัดลวด
 		- หากติดเงื่อนไขความเสี่ยงระบบจะสั่งการตรวจเป็น “ให้ไปดำเนินการมัดลวด ณ  ด่านศุลกากรที่นำของเข้า” เพื่อนำไปตรวจปล่อยนอกสถานที่ตามที่ระบุข้อมูลไว้ ในช่องรหัสสถานที่ตรวจปล่อยนอกสถานที่ (Outside Release Port)
 
-	- **กรณีติดเงื่อนไขความเสี่ยง**ระบบจะสั่งการตรวจเป็น  **`_"ให้ไปดำเนินการมัดลวด ณ  ด่านศุลกากร ที่นำของเข้า "_`** หากพนักงานศุลกากรผู้มีอำนาจหน้าที่หรือผู้ที่ได้รับมอบหมายเห็นว่าการเปิดตรวจที่ ด่านศุลกากรที่นำของเข้า (First Port)  จะเป็นประโยชน์กว่าให้ทำการเปิดตรวจของ ณ ที่นำของเข้าได้
+	- **กรณีติดเงื่อนไขความเสี่ยง**ระบบจะสั่งการตรวจเป็น  **"ให้ไปดำเนินการมัดลวด ณ  ด่านศุลกากร ที่นำของเข้า "** หากพนักงานศุลกากรผู้มีอำนาจหน้าที่หรือผู้ที่ได้รับมอบหมายเห็นว่าการเปิดตรวจที่ ด่านศุลกากรที่นำของเข้า (First Port)  จะเป็นประโยชน์กว่าให้ทำการเปิดตรวจของ ณ ที่นำของเข้าได้
 
 
 
@@ -120,7 +120,7 @@
 
 - เครื่องหมายและเลขหมายหีบห่อ (Shipping Marks) ต้องสำแดงเครื่องหมายและเลขหมายหีบห่อให้ตรงกับความเป็นจริง ซึ่งจะต้องตรงกับใบตราส่งสินค้า โดยให้สำแดง ดังนี้
 
-	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **`ให้บันทึกเพียง 512 ตัวอักษรได้`**
+	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **ให้บันทึกเพียง 512 ตัวอักษรได้**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความที่เป็นภาษาต่างประเทศ ซึ่งไม่สามารถบันทึกข้อความนั้นได้ เช่น ภาษาจีน ให้ระบุคำว่า **_“PICTURE”_**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นรูปภาพให้ระบุคำว่า **_“PICTURE”_**
 	
@@ -155,10 +155,10 @@
 	- ในเรื่องปัญหาพิกัดศุลกากร อัตราศุลกากร ราคาศุลกากร 
 	- ในเรื่องที่ต้องแจ้งความไว้ต่อพนักงานศุลกากรก่อนการส่งมอบว่าจะยื่นคำขอคืนเงินอากร และได้มีการแจ้งเหตุผลไว้ในช่อง หมายเหตุ **`"Remark"`** แล้ว
 2. **กรณีของนำเข้าเป็นของที่มีลักษณะ ดังต่อไปนี้**
-	- `ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร`
-	- `ของเก่าใช้แล้ว`
-	- `ของด้อยสภาพ`
-3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าตาม (1) หรือ (2) ให้ระบุค่า **`"Y"`** ในช่อง **_"Assessment Request Code"_ “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า”**
+	- ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร
+	- ของเก่าใช้แล้ว
+	- ของด้อยสภาพ
+3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าตาม (1) หรือ (2) ให้ระบุค่า **"Y"** ในช่อง **_"Assessment Request Code"_ “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า”**
 4. ระบบคอมพิวเตอร์ของศุลกากรจะสั่งการตรวจใบขนสินค้าขาเข้าเป็น **_"เปิดตรวจ"_** 
 5. พบพนักงานศุลกากร ณ หน่วยบริการศุลกากร ที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารมาแสดง หรือร้องขอให้พนักงานศุลกากรพิจารณาดำเนินการใด ๆ  
 
@@ -247,6 +247,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDE3NzUyMjMyLC0xNjkxMTc3ODk0LDU3MT
-A5NTgwMyw0NzQ4MjI2ODNdfQ==
+eyJoaXN0b3J5IjpbOTU5ODM5MzU0LDQxNzc1MjIzMiwtMTY5MT
+E3Nzg5NCw1NzEwOTU4MDMsNDc0ODIyNjgzXX0=
 -->
