KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -176,10 +176,10 @@
 ### หลักการคำนวณราคาของจากเงินตราต่างประเทศเป็นเงินตราไทย
 1. การคำนวณราคาของให้เป็นเงินตราไทย ให้ปฏิบัติดังนี้
 	- คำนวณตามอัตราแลกเปลี่ยนเงินตราต่างประเทศที่กรมศุลกากรประกาศกำหนด  สำหรับการนำเข้าและการส่งออก 
-	- ของที่**นำเข้า** ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **`วันนำเข้า`**
-	-  ของ**ส่งออก**ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **`วันที่ออกใบขนสินค้าให้`**
+	- ของที่**นำเข้า** ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **วันนำเข้า**
+	-  ของ**ส่งออก**ให้ใช้อัตราแลกเปลี่ยนที่ใช้อยู่ใน **วันที่ออกใบขนสินค้าให้**
 2. การประกาศกำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศ สำนักมาตรฐานพิธีการและราคาศุลกากร จะดำเนินการ ดังนี้
-	- พิจารณากำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศเป็นเงินตราไทย จากข้อมูลของธนาคารแห่งประเทศไทยในรอบ **7 วัน ก่อนวันประกาศ**  โดยใช้**อัตราซื้อสำหรับการส่งออก`** และ**อัตราขายสำหรับการนำเข้า**
+	- พิจารณากำหนดอัตราแลกเปลี่ยนเงินตราต่างประเทศเป็นเงินตราไทย จากข้อมูลของธนาคารแห่งประเทศไทยในรอบ **7 วัน ก่อนวันประกาศ**  โดยใช้**อัตราซื้อสำหรับการส่งออก** และ**อัตราขายสำหรับการนำเข้า**
 	- ดำเนินการให้มีการประกาศใช้อัตราแลกเปลี่ยนเงินตราต่างประเทศก่อนสิ้นเดือนไม่น้อยกว่า 7 วัน และมีผลใช้ในเดือนถัดไป หากวันประกาศตรงกับวันหยุดราชการ ให้ประกาศในวันทำการถัดไป
 
 
@@ -243,10 +243,10 @@
 - การคำนวณอากรที่ชำระ (Amount Paid) ปกติแล้วจะต้องมีค่าเท่ากับอากรตามปกติ (Amount) ตาม Case 1  ยกเว้น Exemption Rate มีค่า
 - อากรที่ชำระ (Amount Paid)  ที่คำนวณได้นั้น หากต้องการวางประกัน ให้บันทึกค่าที่ช่อง **_Deposit Amount_** ให้เท่ากับ `อากรที่ชำระ (Amount Paid)`  นั้น 
 
-> `การคำนวณค่าวางประกัน ทุกกรณี ไม่ต้องปัดเป็นตัวกลมให้วางเท่ากับค่าอากรที่ชำระ`
+> ### การคำนวณค่าวางประกัน ทุกกรณี ไม่ต้องปัดเป็นตัวกลมให้วางเท่ากับค่าอากรที่ชำระ
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU5ODM5MzU0LDQxNzc1MjIzMiwtMTY5MT
-E3Nzg5NCw1NzEwOTU4MDMsNDc0ODIyNjgzXX0=
+eyJoaXN0b3J5IjpbLTE4MjkzMDU5ODUsNDE3NzUyMjMyLC0xNj
+kxMTc3ODk0LDU3MTA5NTgwMyw0NzQ4MjI2ODNdfQ==
 -->
