KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -241,16 +241,16 @@
 
 - ตัวอย่างด้านบนใช้ Duty rate เท่ากับ 20%
 - การคำนวณอากรที่ชำระ (Amount Paid) ปกติแล้วจะต้องมีค่าเท่ากับอากรตามปกติ (Amount) ตาม Case 1  ยกเว้น Exemption Rate มีค่า
-- อากรที่ชำระ (Amount Paid)  ที่คำนวณได้นั้น หากต้องการวางประกัน ให้บันทึกค่าที่ช่อง **_Deposit Amount_** ให้เท่ากับ `อากรที่ชำระ (Amount Paid)`  นั้น 
+- อากรที่ชำระ (Amount Paid)  ที่คำนวณได้นั้น หากต้องการวางประกัน ให้บันทึกค่าที่ช่อง [**Deposit Amount** ให้เท่ากับ **อากรที่ชำระ (Amount Paid)  เท่านั้น**](1)
 
-> ### การคำนวณค่าวางประกัน ทุกกรณี ไม่ต้องปัดเป็นตัวกลมให้วางเท่ากับค่าอากรที่ชำระ
+> [การคำนวณค่าวางประกัน ทุกกรณี ไม่ต้องปัดเป็นตัวกลมให้วางเท่ากับค่าอากรที่ชำระ](1)
 
 
 [1]: http://www.e-customs.co.th 
 [2]: https://www.facebook.com/ECS.24hr/
 [3]: http://www.customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0ODM4NTA5NywtMTgyOTMwNTk4NSw0MT
+eyJoaXN0b3J5IjpbLTczNjE0NTA0MywtMTgyOTMwNTk4NSw0MT
 c3NTIyMzIsLTE2OTExNzc4OTQsNTcxMDk1ODAzLDQ3NDgyMjY4
 M119
 -->
