--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -165,7 +165,7 @@
 ## รหัสสกุลเงินตราและอัตราแลกเปลี่ยน 
 
 ### รหัสสกุลเงินตรา (Currency Code) 
-- รหัสสกุลเงินตรา (Currency Code) ในส่วน Import Declaration Control ให้บันทึกค่ารหัสสกุลเงินตราตามมาตรฐาน _หากสินค้ามีหลายสกุลเงินตราในใบขนสินค้าให้ใช้รหัสสกุลเงินตราที่มีอัตราแลกเปลี่ยนสูงสุด_
+- รหัสสกุลเงินตรา (Currency Code) ในส่วน Import Declaration Control ให้บันทึกค่ารหัสสกุลเงินตราตามมาตรฐาน **หากสินค้ามีหลายสกุลเงินตราในใบขนสินค้าให้ใช้รหัสสกุลเงินตราที่มีอัตราแลกเปลี่ยนสูงสุด**
 - รหัสสกุลเงินตรา (Currency Code) ในส่วน Import Declaration Control (Invoice) ให้บันทึกค่ารหัสสกุลเงินตราตามมาตรฐาน หากสินค้ามีหลายสกุลเงินตราในใบขนสินค้าให้ใช้รหัสสกุลเงินตราที่มีอัตราแลกเปลี่ยนสูงสุด
 - รหัสสกุลเงินตรา (Currency) ในส่วน Import Declaration Detail ให้บันทึกค่ารหัสสกุลเงินตราจริงตามมาตรฐาน 
 
@@ -230,7 +230,7 @@
 
 	- หากมีเลขที่ใบขนสินค้าที่อ้างถึง (Reference Declaration Number) และรายการในใบขนสินค้าที่อ้างถึง (Reference Declaration Line Number) ต่างกัน ให้แยกรายการของในส่วน Import Declaration Detail ด้วย
 
-	- `กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ`
+	- **กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ**
 
 ## หลักการบันทึกค่าภาษีอากรและวางประกัน ในใบขนสินค้าขาเข้า
 
@@ -241,7 +241,7 @@
 
 - ตัวอย่างด้านบนใช้ Duty rate เท่ากับ 20%
 - การคำนวณอากรที่ชำระ (Amount Paid) ปกติแล้วจะต้องมีค่าเท่ากับอากรตามปกติ (Amount) ตาม Case 1  ยกเว้น Exemption Rate มีค่า
-- อากรที่ชำระ (Amount Paid)  ที่คำนวณได้นั้น หากต้องการวางประกัน ให้บันทึกค่าที่ช่อง [**Deposit Amount** ให้เท่ากับ **อากรที่ชำระ (Amount Paid)  เท่านั้น**](1)
+- อากรที่ชำระ (Amount Paid)  ที่คำนวณได้นั้น หากต้องการวางประกัน ให้บันทึกค่าที่ช่อง **Deposit Amount** ให้เท่ากับ **อากรที่ชำระ (Amount Paid)  เท่านั้น**
 
 > [การคำนวณค่าวางประกัน ทุกกรณี ไม่ต้องปัดเป็นตัวกลมให้วางเท่ากับค่าอากรที่ชำระ](1)
 
@@ -250,7 +250,7 @@
 [2]: https://www.facebook.com/ECS.24hr/
 [3]: http://www.customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTczNjE0NTA0MywtMTgyOTMwNTk4NSw0MT
-c3NTIyMzIsLTE2OTExNzc4OTQsNTcxMDk1ODAzLDQ3NDgyMjY4
-M119
+eyJoaXN0b3J5IjpbLTEzNjY4MzA0NTksLTE4MjkzMDU5ODUsND
+E3NzUyMjMyLC0xNjkxMTc3ODk0LDU3MTA5NTgwMyw0NzQ4MjI2
+ODNdfQ==
 -->
