KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -120,7 +120,7 @@
 
 - เครื่องหมายและเลขหมายหีบห่อ (Shipping Marks) ต้องสำแดงเครื่องหมายและเลขหมายหีบห่อให้ตรงกับความเป็นจริง ซึ่งจะต้องตรงกับใบตราส่งสินค้า โดยให้สำแดง ดังนี้
 
-	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **ให้บันทึกเพียง 512 ตัวอักษรได้**
+	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **_ให้บันทึกเพียง 512 ตัวอักษรได้_**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความที่เป็นภาษาต่างประเทศ ซึ่งไม่สามารถบันทึกข้อความนั้นได้ เช่น ภาษาจีน ให้ระบุคำว่า **_“PICTURE”_**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นรูปภาพให้ระบุคำว่า **_“PICTURE”_**
 	
@@ -153,20 +153,20 @@
 
 1. กรณีมีปัญหาและต้องการพบพนักงานศุลกากร ณ ด่านศุลกากรที่นำของเข้า 
 	- ในเรื่องปัญหาพิกัดศุลกากร อัตราศุลกากร ราคาศุลกากร 
-	- ในเรื่องที่ต้องแจ้งความไว้ต่อพนักงานศุลกากรก่อนการส่งมอบว่าจะยื่นคำขอคืนเงินอากร และได้มีการแจ้งเหตุผลไว้ในช่อง หมายเหตุ **`"Remark"`** แล้ว
+	- ในเรื่องที่ต้องแจ้งความไว้ต่อพนักงานศุลกากรก่อนการส่งมอบว่าจะยื่นคำขอคืนเงินอากร และได้มีการแจ้งเหตุผลไว้ในช่อง หมายเหตุ **"Remark"** แล้ว
 2. **กรณีของนำเข้าเป็นของที่มีลักษณะ ดังต่อไปนี้**
 	- ของนำเข้าตามภาค 4 แห่งพระราชกำหนดพิกัดอัตราศุลกากร
 	- ของเก่าใช้แล้ว
 	- ของด้อยสภาพ
 3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าตาม (1) หรือ (2) ให้ระบุค่า **"Y"** ในช่อง **_"Assessment Request Code"_ “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า”**
-4. ระบบคอมพิวเตอร์ของศุลกากรจะสั่งการตรวจใบขนสินค้าขาเข้าเป็น **_"เปิดตรวจ"_** 
+4. ระบบคอมพิวเตอร์ของศุลกากรจะสั่งการตรวจใบขนสินค้าขาเข้าเป็น **"เปิดตรวจ"** 
 5. พบพนักงานศุลกากร ณ หน่วยบริการศุลกากร ที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารมาแสดง หรือร้องขอให้พนักงานศุลกากรพิจารณาดำเนินการใด ๆ  
 
 ## รหัสสกุลเงินตราและอัตราแลกเปลี่ยน 
 
 ### รหัสสกุลเงินตรา (Currency Code) 
 - รหัสสกุลเงินตรา (Currency Code) ในส่วน Import Declaration Control ให้บันทึกค่ารหัสสกุลเงินตราตามมาตรฐาน **หากสินค้ามีหลายสกุลเงินตราในใบขนสินค้าให้ใช้รหัสสกุลเงินตราที่มีอัตราแลกเปลี่ยนสูงสุด**
-- รหัสสกุลเงินตรา (Currency Code) ในส่วน Import Declaration Control (Invoice) ให้บันทึกค่ารหัสสกุลเงินตราตามมาตรฐาน หากสินค้ามีหลายสกุลเงินตราในใบขนสินค้าให้ใช้รหัสสกุลเงินตราที่มีอัตราแลกเปลี่ยนสูงสุด
+- รหัสสกุลเงินตรา (Currency Code) ในส่วน Import Declaration Control (Invoice) ให้บันทึกค่ารหัสสกุลเงินตราตามมาตรฐาน **หากสินค้ามีหลายสกุลเงินตราในใบขนสินค้าให้ใช้รหัสสกุลเงินตราที่มีอัตราแลกเปลี่ยนสูงสุด**
 - รหัสสกุลเงินตรา (Currency) ในส่วน Import Declaration Detail ให้บันทึกค่ารหัสสกุลเงินตราจริงตามมาตรฐาน 
 
 ### อัตราแลกเปลี่ยนเงินตรา (Exchange Rate)
@@ -250,7 +250,7 @@
 [2]: https://www.facebook.com/ECS.24hr/
 [3]: http://www.customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNjY4MzA0NTksLTE4MjkzMDU5ODUsND
-E3NzUyMjMyLC0xNjkxMTc3ODk0LDU3MTA5NTgwMyw0NzQ4MjI2
-ODNdfQ==
+eyJoaXN0b3J5IjpbMjU1NTU0NTAxLC0xODI5MzA1OTg1LDQxNz
+c1MjIzMiwtMTY5MTE3Nzg5NCw1NzEwOTU4MDMsNDc0ODIyNjgz
+XX0=
 -->
