--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -43,9 +43,9 @@
  
 วันนำเข้า (Arrival Date) วันที่นำเข้ามาสำเร็จ ตามมาตรา 50 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560  วันที่นำเข้า ปี ค.ศ. เดือน วัน (CCYYMMDD) ให้กำหนดดังนี้
 
-- **_ใบขนสินค้าขาเข้า_** ประเภทเอกสาร **0**
-- **_คำร้องขอรับของไปก่อน_** ประเภทเอกสาร **3**
-- **_ใบขนสินค้าขาเข้าปากระวาง_** ประเภทเอกสาร **5**
+- **ใบขนสินค้าขาเข้า** ประเภทเอกสาร **0**
+- **คำร้องขอรับของไปก่อน** ประเภทเอกสาร **3**
+- **ใบขนสินค้าขาเข้าปากระวาง** ประเภทเอกสาร **5**
 
 | การนำเข้า | Mode of Transport |วันนำเข้า คือ |
 |--|:--:|--|
@@ -120,7 +120,7 @@
 
 - เครื่องหมายและเลขหมายหีบห่อ (Shipping Marks) ต้องสำแดงเครื่องหมายและเลขหมายหีบห่อให้ตรงกับความเป็นจริง ซึ่งจะต้องตรงกับใบตราส่งสินค้า โดยให้สำแดง ดังนี้
 
-	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **_ให้บันทึกเพียง 512 ตัวอักษรได้_**
+	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความให้บันทึกเป็นข้อความตามจริง หากเครื่องหมายและเลขหมายหีบห่อมีความยาวเกิน 512 ตัวอักษร **ให้บันทึกเพียง 512 ตัวอักษรได้**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นข้อความที่เป็นภาษาต่างประเทศ ซึ่งไม่สามารถบันทึกข้อความนั้นได้ เช่น ภาษาจีน ให้ระบุคำว่า **_“PICTURE”_**
 	- ถ้าเครื่องหมายและเลขหมายหีบห่อเป็นรูปภาพให้ระบุคำว่า **_“PICTURE”_**
 	
@@ -250,7 +250,7 @@
 [2]: https://www.facebook.com/ECS.24hr/
 [3]: http://www.customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjU1NTU0NTAxLC0xODI5MzA1OTg1LDQxNz
-c1MjIzMiwtMTY5MTE3Nzg5NCw1NzEwOTU4MDMsNDc0ODIyNjgz
-XX0=
+eyJoaXN0b3J5IjpbLTEzNDMxNTY0MzcsLTE4MjkzMDU5ODUsND
+E3NzUyMjMyLC0xNjkxMTc3ODk0LDU3MTA5NTgwMyw0NzQ4MjI2
+ODNdfQ==
 -->
