KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -3,8 +3,17 @@
 
 โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
 
+1. Import Declaration Control	ประกอบด้วย	73 Fields
+2. Import Invoice Control 	ประกอบด้วย	35 Fields
+3. Import Invoice Detail	ประกอบด้วย	76 Fields
+4. Import Invoice Detail (Duty)	ประกอบด้วย	14 Fields
+5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
+6. Import Invoice Detail (Deposit)	ประกอบด้วย	 2 Fields
+
+## Import Declaration Control
+
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMDU4ODc5NTBdfQ==
+eyJoaXN0b3J5IjpbLTQ5MDM1ODkxOSwtMjEwNTg4Nzk1MF19
 -->
