KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -1,8 +1,16 @@
 โครงสร้างข้อมูลใบขนสินค้าขาเข้า
 ===
 
+1. หาก Field ใด กำหนดให้ต้องระบุค่า **(Value = M)** แต่ผู้บันทึกไม่สามารถหาข้อมูลได้
+	- สำหรับ Field ที่เป็น Alphabet (แสดงออกเป็นตัวอักษร) ให้ระบุค่าเป็น N/A 
+	- สำหรับ Field ที่เป็น Numeric (แสดงออกเป็นตัวเลข) ให้ระบุค่าเป็น 0 (ศูนย์)
+2. หาก Field ใด กำหนดให้ไม่ต้องระบุค่า **(Value = O)** และผู้บันทึกไม่สามารถหาข้อมูลได้ ก็ไม่ต้องบันทึกค่าใด ๆ 
+3. หาก Field ใด กำหนดให้ต้องระบุค่า เมื่อเข้าเงื่อนไขที่กำหนด **(Value = C)** แต่ผู้บันทึกไม่สามารถหาข้อมูลได้
+	- สำหรับ Field ที่เป็น Alphabet (แสดงออกเป็นตัวอักษร) ให้ระบุค่าเป็น N/A 
+	- สำหรับ Field ที่เป็น Numeric (แสดงออกเป็นตัวเลข) ให้ระบุค่าเป็น 0 (ศูนย์)
+	- 
 โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
-
+---
 1. Import Declaration Control	ประกอบด้วย	73 Fields
 2. Import Invoice Control 	ประกอบด้วย	35 Fields
 3. Import Invoice Detail	ประกอบด้วย	76 Fields
@@ -15,5 +23,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ5MDM1ODkxOSwtMjEwNTg4Nzk1MF19
+eyJoaXN0b3J5IjpbMjEyMzMxMDMwMSwtNDkwMzU4OTE5LC0yMT
+A1ODg3OTUwXX0=
 -->
