--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -10,7 +10,7 @@
 	- สำหรับ Field ที่เป็น Numeric (แสดงออกเป็นตัวเลข) ให้ระบุค่าเป็น 0 (ศูนย์)
 	- 
 โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
----
+
 1. Import Declaration Control	ประกอบด้วย	73 Fields
 2. Import Invoice Control 	ประกอบด้วย	35 Fields
 3. Import Invoice Detail	ประกอบด้วย	76 Fields
@@ -23,6 +23,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEyMzMxMDMwMSwtNDkwMzU4OTE5LC0yMT
-A1ODg3OTUwXX0=
+eyJoaXN0b3J5IjpbLTc2MTQ4NjI0LC00OTAzNTg5MTksLTIxMD
+U4ODc5NTBdfQ==
 -->
