KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -11,6 +11,16 @@
 	- สำหรับ Field ที่เป็น Alphabet (แสดงออกเป็นตัวอักษร) ให้ระบุค่าเป็น N/A 
 	- สำหรับ Field ที่เป็น Numeric (แสดงออกเป็นตัวเลข) ให้ระบุค่าเป็น 0 (ศูนย์)
 
+|อักษรย่อ|	คำอธิบาย|
+|:--|:--:|--:|
+|n3|	ข้อมูลชนิดตัวเลข (Numeric Characters) คงที่ คือ 3 ตัวอักษร|
+|a3|	ข้อมูลชนิดตัวอักษร (Alphabetic Characters) คงที่ คือ 3 ตัวอักษร|
+|an3|	ข้อมูลชนิดตัวอักษรหรือตัวเลข คงที่ คือ 3 ตัวอักษร|
+|n..3|	|ข้อมูลชนิดตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
+|a..3|	ข้อมูลชนิดตัวอักษรความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
+|an..3|	ข้อมูลชนิดตัวอักษรหรือตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
+|n..16,2|	ข้อมูลชนิดตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 16 ตัวอักษรรวมความยาวทศนิยมสูงสุด 2 ตัวอักษร (อนุญาตให้ตัวคั่นเป็นจุดทศนิยม “.”)|
+
 ## โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
 
 1. Import Declaration Control	ประกอบด้วย	73 Fields
@@ -25,6 +35,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjA1NDE3NDYyLC00OTAzNTg5MTksLTIxMD
-U4ODc5NTBdfQ==
+eyJoaXN0b3J5IjpbMTY1OTg4MDM3OCwtNDkwMzU4OTE5LC0yMT
+A1ODg3OTUwXX0=
 -->
