KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -10,7 +10,7 @@
 3. หาก Field ใด กำหนดให้ต้องระบุค่า เมื่อเข้าเงื่อนไขที่กำหนด **(Value = C)** แต่ผู้บันทึกไม่สามารถหาข้อมูลได้
 	- สำหรับ Field ที่เป็น Alphabet (แสดงออกเป็นตัวอักษร) ให้ระบุค่าเป็น N/A 
 	- สำหรับ Field ที่เป็น Numeric (แสดงออกเป็นตัวเลข) ให้ระบุค่าเป็น 0 (ศูนย์)
-
+## อักษรย่อ ที่ใช้ในการอธิบายรูปแบบชนิดของข้อมูล
 |อักษรย่อ|	คำอธิบาย|
 |:--|:--|
 |n3|	ข้อมูลชนิดตัวเลข (Numeric Characters) คงที่ คือ 3 ตัวอักษร|
@@ -35,6 +35,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2ODc1NjA0NiwtNDkwMzU4OTE5LC0yMT
+eyJoaXN0b3J5IjpbLTY5NDc2MzMzOSwtNDkwMzU4OTE5LC0yMT
 A1ODg3OTUwXX0=
 -->
